added Close-btn and project-img and next-btn to details-card

--- a/src/app/portfolio/project-details-card/project-details-card.component.html
+++ b/src/app/portfolio/project-details-card/project-details-card.component.html
@@ -43,5 +43,17 @@
 			</div>
 		</div>
 	</div>
-	<div id="project-details-card-right-side" class="project-details-card-side-wrapper"></div>
+	<div id="project-details-card-right-side" class="project-details-card-side-wrapper">
+		<div class="details-card-close-btn-container">
+			<img src="assets/icons/details_close.png" alt="Close Icon">
+		</div>
+		<div class="details-card-img-container">
+			<img src="assets/img/project_thumbnails/join_thumbnail.png" alt="Project Join Image">
+		</div>
+		<div class="details-card-next-project-btn-container">
+			<div class="details-card-next-project-text">Next project</div>
+			<div class="details-card-next-project-arrow"><img src="assets/icons/details_next_arrow.png" alt="Arrow">
+			</div>
+		</div>
+	</div>
 </div>
