added smooth animation to close-button in details-card

--- a/src/app/portfolio/project-details-card/project-details-card.component.html
+++ b/src/app/portfolio/project-details-card/project-details-card.component.html
@@ -45,7 +45,9 @@
 	</div>
 	<div id="project-details-card-right-side" class="project-details-card-side-wrapper">
 		<div class="details-card-close-btn-container">
-			<img src="assets/icons/details_close.png" alt="Close Icon">
+			<div class="close-btn-container">
+				<div class="close-btn"></div>
+			</div>
 		</div>
 		<div class="details-card-img-container">
 			<img src="assets/img/project_thumbnails/join_thumbnail.png" alt="Project Join Image">
