fixed the positioning of details-overlay

--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -2,10 +2,10 @@
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+  padding-left: 80px;
 }
 
 .portfolio-header {
-  transform: translateY(460px);
   width: 1440px;
 
   > h2 {
