--- a/src/app/portfolio/project-details-card/project-details-card.component.scss
+++ b/src/app/portfolio/project-details-card/project-details-card.component.scss
@@ -1,8 +1,8 @@
 :host {
   position: fixed;
-  top: 124px;
-  left: 0;
-
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   z-index: 4;
   display: flex;
   justify-content: center;
