--- a/src/app/technologies/technologies.component.scss
+++ b/src/app/technologies/technologies.component.scss
@@ -1,5 +1,6 @@
 .technologies-container {
-  transform: translateY(260px);
+  padding-top: 260px;
+  padding-bottom: 180px;
 }
 
 .technologies-content-container {
