--- a/src/styles.scss
+++ b/src/styles.scss
@@ -39,6 +39,19 @@ body {
   scroll-behavior: smooth;
 }
 
+html {
+  background-color: black;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+body {
+  max-width: 1440px;
+  height: 100vh;
+}
+
 .display-none {
   display: none;
 }
