removed not needed comments

--- a/src/app/portfolio/projects/projects.component.html
+++ b/src/app/portfolio/projects/projects.component.html
@@ -1,7 +1,7 @@
 <div class="projects-and-thumbnails-container">
 	<div class="projects-container">
 		<div id="join-project" class="single-project-container project-borders" (mouseenter)="showThumbnail('join')"
-			(mouseleave)="hideThumbnail()" (click)="showDetails('join')"> <!-- Click-Event hinzugefügt -->
+			(mouseleave)="hideThumbnail()" (click)="showDetails('join')">
 			<div class="project-title-and-arrow-container">
 				<div class="project-title-container">Join</div>
 				<div class="project-arrow-container "><img src="assets/icons/project_arrow.png" alt="Arrow"
