added shadow-overlay to references-component

--- a/src/app/references/references.component.html
+++ b/src/app/references/references.component.html
@@ -1,3 +1,8 @@
 <h2>What my colleagues say about me</h2>
 
-<app-reference-card></app-reference-card>
+<div class="carousel-shadow-wrapper">
+	<div class="carousel-overlay"></div>
+	<app-reference-card></app-reference-card>
+	<app-reference-card></app-reference-card>
+	<app-reference-card></app-reference-card>
+</div>
