--- a/src/app/references/reference-card/reference-card.component.html
+++ b/src/app/references/reference-card/reference-card.component.html
@@ -1,9 +1,7 @@
 <div class="reference-card-container">
-	<div class="reference-card-text-container">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas ut tempora
-		nesciunt itaque vel? Vitae iusto explicabo tempore. Laudantium ea quod iusto quo odit quam corporis est, atque
-		ipsum voluptas.</div>
+	<div class="reference-card-text-container">{{ text }}</div>
 	<div class="reference-card-author-container">
 		<div class="leading-author-line"></div>
-		<div class="reference-card-author-name">H. Janisch - Team Partner</div>
+		<div class="reference-card-author-name">{{ author }}</div>
 	</div>
 </div>
