added controls to carousel with hover-effects

--- a/src/app/references/references.component.html
+++ b/src/app/references/references.component.html
@@ -1,12 +1,18 @@
 <h2>What my colleagues say about me</h2>
 
 <div class="carousel-shadow-wrapper">
-  <div class="carousel-overlay">
-    <img src="assets/icons/quotes.png" alt="Quotes Icon">
-  </div>
-  <app-reference-card 
-    *ngFor="let reference of references"
-    [text]="reference.text"
-    [author]="reference.author">
-  </app-reference-card>
+	<div class="carousel-overlay">
+		<img src="assets/icons/quotes.png" alt="Quotes Icon">
+	</div>
+	<app-reference-card *ngFor="let reference of references" [text]="reference.text" [author]="reference.author">
+	</app-reference-card>
+</div>
+<div class="carousel-controls-container">
+	<button id="prev-button" class="prev-button" (click)="prevSlide()"><img src="assets/icons/arrow_left_default.png"
+			alt="Arrow Left Icon"></button>
+	<div class="control-point"></div>
+	<div class="control-point"></div>
+	<div class="control-point"></div>
+	<button id="next-button" class="next-button" (click)="nextSlide()"><img src="assets/icons/arrow_right_default.png"
+			alt="Arrow Right Icon"></button>
 </div>
