--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,7 @@
   --primary-font-color: rgba(217, 217, 2127, 1);
   --banner-bg: #434343;
   --cursor-shadow-color: rgba(48, 112, 102, 1);
+  --white-text: rgba(255, 255, 255, 1);
 
   --x: 50%;
   --y: 50%;
