--- a/src/app/references/references.component.scss
+++ b/src/app/references/references.component.scss
@@ -46,7 +46,7 @@ h2 {
   width: 1440px;
   height: 274px;
   z-index: 0;
-  overflow: hidden; /* falls Overlay oder Inhalt übersteht */
+  overflow: hidden;
 }
 
 .carousel-overlay {
@@ -76,4 +76,49 @@ h2 {
 .carousel-shadow-wrapper > app-reference-card {
   position: relative;
   z-index: 0;
+}
+
+.carousel-controls-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 32px;
+
+  .control-point {
+    width: 8px;
+    height: 8px;
+    border-radius: 50%;
+    background-color: var(--white-text);
+  }
+
+  > button {
+    width: 40px;
+    height: 40px;
+    background: none;
+    border: none;
+    cursor: pointer;
+
+    > img {
+      transition: transform 0.2s ease-in-out;
+    }
+    > button > img {
+      width: 32px;
+      height: 32px;
+    }
+  }
+
+  #prev-button:hover {
+    > img {
+      content: url("../../../public/assets/icons/arrow_left_hover.png");
+      transform: translateX(-5px);
+    }
+  }
+
+  #next-button:hover {
+    > img {
+      content: url("../../../public/assets/icons/arrow_right_hover.png");
+      transform: translateX(5px);
+    }
+  }
 }
