--- a/src/app/references/references.component.scss
+++ b/src/app/references/references.component.scss
@@ -39,10 +39,10 @@ h2 {
 
 .carousel-shadow-wrapper {
   position: relative; /* wichtig für das Overlay */
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 64px;
+  // display: flex;
+  // justify-content: center;
+  // align-items: center;
+  // gap: 64px;
   width: 1440px;
   height: 274px;
   z-index: 0;
@@ -78,6 +78,16 @@ h2 {
   z-index: 0;
 }
 
+.carousel-track {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: transform 0.5s ease-in-out;
+  width: 100%;
+  height: 100%;
+  gap: 64px;
+}
+
 .carousel-controls-container {
   width: 100%;
   display: flex;
@@ -85,11 +95,24 @@ h2 {
   align-items: center;
   gap: 32px;
 
+  // .control-point {
+  //   width: 8px;
+  //   height: 8px;
+  //   border-radius: 50%;
+  //   background-color: var(--white-text);
+  // }
+
   .control-point {
     width: 8px;
     height: 8px;
     border-radius: 50%;
     background-color: var(--white-text);
+    cursor: pointer;
+    transition: 0.3s;
+  }
+
+  .control-point.active {
+    background-color: var(--active-font-color);
   }
 
   > button {
@@ -121,4 +144,24 @@ h2 {
       transform: translateX(5px);
     }
   }
+}
+
+.card-wrapper {
+  transition: all 0.5s ease-in-out;
+  opacity: 0.5;
+  transform: scale(0.8);
+}
+
+.card-wrapper.active {
+  transform: scale(1);
+  opacity: 1;
+}
+
+.card-wrapper.left,
+.card-wrapper.right {
+  transform: scale(0.8);
+  opacity: 0.5;
+  background-color: rgba(61, 207, 182, 0.1);
+  border-color: rgba(61, 207, 182, 1);
+  border-radius: 8px;
 }
