--- a/src/app/references/references.component.scss
+++ b/src/app/references/references.component.scss
@@ -28,8 +28,29 @@ h2 {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
-  height: 274px;
+}
+
+.carousel-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 1440px;
+  height: 100%;
+  background: linear-gradient(
+    90deg,
+    #1c1c1c 0%,
+    rgba(28, 28, 28, 0) 10%,
+    rgba(28, 28, 28, 0) 90%,
+    #1c1c1c 100%
+  );
+  z-index: 1;
+  pointer-events: none;
+
+  > img {
+    position: absolute;
+    top: 3px;
+    left: 355px;
+  }
 }
 
 .carousel-content {
@@ -50,7 +71,7 @@ app-reference-card {
 
 .carousel-track {
   display: flex;
-  transition: all 0.5s ease-in-out;
+  transition: all 0.3s ease-in-out;
   gap: 24px;
   height: 100%;
 }
@@ -109,7 +130,9 @@ app-reference-card {
   display: flex;
   justify-content: center;
   align-items: center;
-  transition: all 0.2s ease-in-out;
+  transition: transform 0.3s ease, opacity 0.3s ease, background-color 0.3s ease,
+    scale 0.3s ease;
+  will-change: transform, opacity, background-color, scale;
 }
 
 .card-wrapper.left,
@@ -127,11 +150,11 @@ app-reference-card {
 }
 
 .carousel-track.left {
-  animation: slide-left 0.5s forwards;
+  animation: slide-left 0.3s forwards;
 }
 
 .carousel-track.right {
-  animation: slide-right 0.5s forwards;
+  animation: slide-right 0.3s forwards;
 }
 
 @keyframes slide-left {
