--- a/src/app/references/references.component.scss
+++ b/src/app/references/references.component.scss
@@ -72,7 +72,6 @@ h2 {
     border-radius: 50%;
     background-color: var(--white-text);
 
-    // cursor: pointer;
     transition: 0.3s;
   }
 
@@ -116,6 +115,10 @@ h2 {
 .card-wrapper.right {
   opacity: 0.5;
   transform: scale(0.8);
+
+  & :hover {
+    cursor: pointer;
+  }
 }
 
 .card-wrapper.center {
