added content and style to contact-component

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,1 +1,17 @@
-<p>contact works!</p>
+<div class="contact-left-side">
+	<p class="contact-title">Contact me</p>
+
+	<h2 class="contact-headline">Let's work together</h2>
+	<p class="contact-subtitle">Got a problem to solve?</p>
+	<p class="contact-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam delectus hic praesentium
+		voluptatum illo
+		ducimus mollitia, veniam at eius vitae ipsam? Nostrum obcaecati consequatur provident eum, modi eligendi culpa
+		numquam!</p>
+	<p class="contact-cta">Need a Frontend developer? <span>Let's talk!</span></p>
+</div>
+<div class="contact-right-side">
+	<form class="contact-form" action="*">
+
+		<button class="primary-btn"><span>Say Hello ;)</span></button>
+	</form>
+</div>
