added input-container and policy confirm checkbox to contact-component

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -11,7 +11,17 @@
 </div>
 <div class="contact-right-side">
 	<form class="contact-form" action="*">
+		<div class="contact-form-container guests-name-container"></div>
+		<div class="contact-form-container guests-email-container"></div>
+		<div class="contact-form-container guests-message-container"></div>
+		<div class="confirm-policy-container">
+			<input type="checkbox" name="confirm-policy" id="confirm-policy">
+			<label for="confirm-policy">I`ve read the <span>privacy policy</span> and agree to the processing of my data
+				as outlined. </label>
+		</div>
+		<div class="contact-form-container contact-btn-container">
+			<button class="primary-btn"><span>Say Hello ;)</span></button>
+		</div>
 
-		<button class="primary-btn"><span>Say Hello ;)</span></button>
 	</form>
 </div>
