--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -71,5 +71,48 @@
 
 .contact-right-side {
   display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
   flex: 1;
+}
+
+.contact-form-container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  flex: 1;
+  padding: 32px;
+}
+
+.guests-name-container {
+  border-top: 2px solid var(--active-font-color);
+}
+
+.guests-email-container {
+  border-top: 2px solid var(--active-font-color);
+  border-bottom: 2px solid var(--active-font-color);
+}
+
+.guests-message-container {
+  border-bottom: 2px solid var(--active-font-color);
+}
+
+.confirm-policy-container {
+  margin-top: 32px;
+
+  > input {
+    margin-right: 8px;
+  }
+
+  > label span {
+    color: var(--active-font-color);
+  }
+}
+
+.contact-btn-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
