--- a/src/app/hero/header/header.component.html
+++ b/src/app/hero/header/header.component.html
@@ -2,7 +2,7 @@
 	<div class="header-button" id="language-switch"></div>
 	<div class="link-point-wrapper">
 		<div class="header-button">
-			<a href="*">About me</a>
+			<a href="#about-me-container">About me</a>
 		</div>
 		<div id="header-about-me-point-container" class="header-point-container">
 			<img src="assets/icons/link_check_radio_button.png" alt="Point">
@@ -11,7 +11,7 @@
 
 	<div class="link-point-wrapper">
 		<div class="header-button">
-			<a href="*">Skills</a>
+			<a href="#technologies-content-container">Skills</a>
 		</div>
 		<div id="header-skills-point-container" class="header-point-container">
 			<img src="assets/icons/link_check_radio_button.png" alt="Point">
