--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -9,8 +9,14 @@
 			<h2>Frontend Developer</h2>
 			<h1>Dennis Jakobi</h1>
 			<div class="title-button-container">
-				<button class="primary-btn"><span>Check my work</span></button>
-				<button class="primary-btn"><span>Contact me</span></button>
+				<a href="#featured-projects">
+					<button class="primary-btn"><span>Check my work</span></button>
+				</a>
+
+				<a href="#contact-title">
+					<button class="primary-btn"><span>Contact me</span></button>
+				</a>
+
 			</div>
 		</div>
 		<div class="hero-container-right flex-col-j-fe">
