--- a/src/app/technologies/technologies.component.html
+++ b/src/app/technologies/technologies.component.html
@@ -1,5 +1,5 @@
 <div class="technologies-container">
-	<div class="technologies-content-container">
+	<div id="technologies-content-container" class="technologies-content-container">
 		<app-info-card title="Technologies" headline="Skill Set">
 			<p>I’m passionate about working with modern front-end technologies such as HTML, CSS, JavaScript,
 				TypeScript,
