--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,4 +1,4 @@
-<div class="about-me-container">
+<div id="about-me-container" class="about-me-container">
 	<img src="assets/img/main_photo_hover_bg.png" alt="Striped Box Background">
 	<img src="assets/img/main_photo.jpg" alt="Photo" id="about-me-photo">
 </div>
