--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -24,7 +24,10 @@
 			<input type="text" placeholder="Hello Dennis, I am interested in..." id="guests-message">
 		</div>
 		<div class="confirm-policy-container">
-			<input type="checkbox" name="confirm-policy" id="confirm-policy">
+			<!-- <input type="checkbox" name="confirm-policy" id="confirm-policy"> -->
+			<div id="confirm-policy-checkbox">
+				<img src="assets/icons/check_box_default.png" alt="Checkbox">
+			</div>
 			<label for="confirm-policy">I`ve read the <span>privacy policy</span> and agree to the processing of my data
 				as outlined. </label>
 		</div>
